package com.aaron.yespdf.preview

/**
 * @author Aaron aaronzzxup@gmail.com
 */
interface IBkFragInterface {
    fun update(collection: MutableCollection<Bookmark>)
}